--- a/app/package.json
+++ b/app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://OpiyoOscar01.github.io/App",
+  "homepage": "https://OpiyoOscar01.github.io/App",
   "name": "app",
   "private": false,
   "version": "0.0.0",
